@@ -1,6 +1,10 @@
 - Fixed issue #14437: id conflict possible in ezcWorkflowVisitorNodeCollector.
 - The ezcWorkflow class now implements the Countable interface. count() invoked
   for an ezcWorkflow object will return the number of nodes of the workflow.
+- The ezcWorkflowExecution::loadFromVariableHandlers() and
+  ezcWorkflowExecution::saveToVariableHandlers() methods now pass the
+  ezcWorkflowExecution object to the ezcWorkflowVariableHandler::load() and
+  ezcWorkflowVariableHandler::save() methods.
 
 
 1.3.1 - Monday 09 February 2009
